--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -758,6 +758,84 @@
     // true
   </code>
 </pre>
+        <h3>6. Обработка данных, API и реализация структур данных:</h3>
+        <h4>6.1. Получение и обработка данных из API</h4>
+        <p>Выполнить запрос к API, обработать данные и вывести список с определённым форматом.</p>
+        <p><strong>Задача:</strong> Получить данные пользователей с <a href="https://jsonplaceholder.typicode.com/users">https://jsonplaceholder.typicode.com/users</a> и вывести их имена и адреса в виде строки: Имя: <code>[Name], Адрес: [Street], [City]</code>.</p>
+<pre>
+  <code class="lang-js">
+    const fetchUsers = async () => {
+      try {
+        const response = await fetch('https://jsonplaceholder.typicode.com/users');
+        const users = await response.json();
+        users.forEach(user => {
+          console.log(`Имя: ${user.name}, Адрес: ${user.address.street}, ${user.address.city}`);
+        });
+      } catch (error) {
+          console.error('Ошибка при загрузке данных:', error);
+      }
+    };
+    fetchUsers();
+  </code>
+</pre>
+        <h4>6.2. Создание кеширующего API</h4>
+        <p>Создать функцию, которая кэширует результаты вызова API, чтобы избежать повторных запросов с одинаковыми параметрами.</p>
+        <p><strong>Задача</strong>: Реализовать кэш для функции <code>fetch</code>.</p>
+<pre>
+  <code class="lang-js">
+    const createCachedFetch = () => {
+      const cache = new Map();
+      return async (url) => {
+        if (cache.has(url)) {
+          console.log('Данные из кэша:', url);
+          return cache.get(url);
+        }
+        const response = await fetch(url);
+        const data = await response.json();
+        cache.set(url, data);
+        return data;
+      };
+    };
+  
+    const cachedFetch = createCachedFetch();
+    cachedFetch('https://jsonplaceholder.typicode.com/posts/1').then(console.log);
+    cachedFetch('https://jsonplaceholder.typicode.com/posts/1').then(console.log);
+  </code>
+</pre>
+        <h4>6.3. Реализация структуры данных — очередь</h4>
+        <p>Реализовать очередь с методами <code>enqueue</code>, <code>dequeue</code> и <code>peek</code>.</p>
+<pre>
+  <code class="lang-js">
+    class Queue {
+      constructor() {
+        this.items = [];
+      }
+  
+      enqueue(item) {
+        this.items.push(item);
+      }
+  
+      dequeue() {
+        return this.items.shift();
+      }
+  
+      peek() {
+        return this.items[0];
+      }
+  
+      isEmpty() {
+        return this.items.length === 0;
+      }
+    }
+  
+    const queue = new Queue();
+    queue.enqueue(1);
+    queue.enqueue(2);
+    console.log(queue.peek()); // 1
+    console.log(queue.dequeue()); // 1
+    console.log(queue.isEmpty()); // false
+  </code>
+</pre>
 
 
       </article>
