--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -1113,7 +1113,7 @@
         <h4>7.6. Генерация всех возможных перестановок строки</h4>
         <p>Реализовать функцию, которая генерирует все перестановки заданной строки.</p>
 <pre>
-  <code>
+  <code class="lang-js">
     const permutations = (str) => {
       if (str.length <= 1) return [str];
       const result = [];
@@ -1129,6 +1129,30 @@
   
     console.log(permutations("abc")); 
     // ['abc', 'acb', 'bac', 'bca', 'cab', 'cba']
+  </code>
+</pre>
+        <h4>7.7. Алгоритм — Сжатие строки</h4>
+        <p>Написать функцию, которая сжимает строку, заменяя повторяющиеся символы на количество их повторений.</p>
+<pre>
+  <code class="lang-js">
+    const compressString = (str) => {
+      let compressed = '';
+      let count = 1;
+  
+      for (let i = 1; i <= str.length; i++) {
+        if (str[i] === str[i - 1]) {
+          count++;
+        } else {
+          compressed += str[i - 1] + (count > 1 ? count : '');
+          count = 1;
+        }
+      }
+  
+      return compressed;
+    };
+  
+    console.log(compressString("aaabccddd")); // a3bc2d3
+    console.log(compressString("abcd")); // abcd
   </code>
 </pre>
 
