--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -425,6 +425,17 @@
     console.log(mergeIntervals([[1, 3], [2, 6], [8, 10], [15, 18]])); // [[1, 6], [8, 10], [15, 18]]
   </code>
 </pre>
+        <h4>2.14. Уникальные элементы в массиве</h4>
+        <p>Напишите функцию, которая возвращает массив, содержащий только уникальные элементы.</p>
+<pre>
+  <code>
+    const getUniqueElements = (arr) => {
+      return [...new Set(arr)];
+    };
+  
+    console.log(getUniqueElements([1, 2, 3, 2, 4, 1])); // [1, 2, 3, 4]
+  </code>
+</pre>
         <h3>3. Задачи на числа</h3>
         <h4>3.1. Сумма цифр числа</h4>
         <p>Найти сумму всех цифр числа.</p>
