--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -484,6 +484,20 @@
     // { 4: ['pear', 'kiwi'], 5: ['apple'], 6: ['banana'] }
   </code>
 </pre>
+        <h4>2.18. Чётные и нечётные числа</h4>
+        <p>Напишите функцию, которая разделяет массив чисел на два массива: чётные и нечётные.</p>
+<pre>
+  <code class="lang-js">
+    const splitEvenOdd = (arr) => {
+      const even = arr.filter(num => num % 2 === 0);
+      const odd = arr.filter(num => num % 2 !== 0);
+      return { even, odd };
+    };
+  
+    console.log(splitEvenOdd([1, 2, 3, 4, 5, 6])); 
+    // { even: [2, 4, 6], odd: [1, 3, 5] }
+  </code>
+</pre>
         <h3>3. Задачи на числа</h3>
         <h4>3.1. Сумма цифр числа</h4>
         <p>Найти сумму всех цифр числа.</p>
