--- a/pages/css.html
+++ b/pages/css.html
@@ -148,10 +148,10 @@
 
         <ul>
           <p><strong>13. Ресурсы для углубления знаний</strong></p>
-          <li><a class="pagesLinks" href="https://developer.mozilla.org/ru/docs/Web/CSS">MDN Web Docs: CSS</a></li>
-          <li><a class="pagesLinks" href="https://css-tricks.com/">CSS Tricks</a></li>
-          <li><a class="pagesLinks" href="https://www.freecodecamp.org/">freeCodeCamp: CSS</a></li>
-          <li>Практика на платформах вроде <a href="https://codepen.io/">CodePen</a> и <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
+          <li><a class="pagesLinks" href="https://developer.mozilla.org/ru/docs/Web/CSS" target="_blank">MDN Web Docs: CSS</a></li>
+          <li><a class="pagesLinks" href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
+          <li><a class="pagesLinks" href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp: CSS</a></li>
+          <li>Практика на платформах вроде <a href="https://codepen.io/" target="_blank">CodePen</a> и <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
         </ul>
         <hr>
       </article>
