--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>LIBRARY</title>
   <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/style.css">
-  
+  <!-- <script src="./scripts/utils/prism.js" defer></script> -->
 </head>
 <body>
   <header class="main-header-top">
@@ -143,79 +143,79 @@
       <div class="tab-content" id="tab2">
         <h2><i class="fa fa-css3" aria-hidden="true"></i> Введение в CSS</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch1-1.html">Что такое CSS и зачем он нужен.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch1-2.html">Основные способы подключения CSS: <code >inline</code>, <code>internal</code>, <code>external</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch1-3.html">Основные синтаксические правила CSS.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch1-4.html">Основные понятия: селекторы, свойства, значения.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css1-1">Что такое CSS и зачем он нужен.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css1-2">Основные способы подключения CSS: <code >inline</code>, <code>internal</code>, <code>external</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css1-3">Основные синтаксические правила CSS.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css1-4">Основные понятия: селекторы, свойства, значения.</a></li>
         </ul>
 
         <h2>Базовые стили</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch2-1.html">Работа с текстом: <code>font-size</code>, <code>font-family</code>, <code>font-weight</code>, <code>text-align</code>, <code>text-transform</code>, <code>line-height</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch2-2.html">Цвета и фон: <code>color</code>, <code>background-color</code>, <code>background-image</code>, <code>opacity</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch2-3.html">Отступы и поля (<code>margins</code> и <code>padding)</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch2-4.html">Бордеры и их свойства: <code>border</code>, <code>border-radius</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css2-1">Работа с текстом: <code>font-size</code>, <code>font-family</code>, <code>font-weight</code>, <code>text-align</code>, <code>text-transform</code>, <code>line-height</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css2-2">Цвета и фон: <code>color</code>, <code>background-color</code>, <code>background-image</code>, <code>opacity</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css2-3">Отступы и поля (<code>margins</code> и <code>padding)</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css2-4">Бордеры и их свойства: <code>border</code>, <code>border-radius</code>.</a></li>
         </ul>
 
         <h2>Селекторы в CSS</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch3-1.html">Простые селекторы: по тегам, классам, идентификаторам.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch3-2.html">Комбинированные селекторы: потомки, дети, соседние элементы.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch3-3.html">Псевдоклассы: <code>:hover</code>, <code>:focus</code>, <code>:active</code>, <code>:nth-child()</code>, <code>:last-child()</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch3-4.html">Псевдоэлементы: <code>::before</code>, <code>::after</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch3-5.html">Атрибутные селекторы.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css3-1">Простые селекторы: по тегам, классам, идентификаторам.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css3-2">Комбинированные селекторы: потомки, дети, соседние элементы.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css3-3">Псевдоклассы: <code>:hover</code>, <code>:focus</code>, <code>:active</code>, <code>:nth-child()</code>, <code>:last-child()</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css3-4">Псевдоэлементы: <code>::before</code>, <code>::after</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css3-5">Атрибутные селекторы.</a></li>
         </ul>
 
         <h2>Работа с блоками и макетом</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch4-1.html">Блочные и строчные элементы.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch4-2.html">Свойства <code>display: block</code>, <code>inline-block</code>, <code>none</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch4-3.html">Модель блочной коробки (Box Model).</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch4-4.html">Введение в Flexbox: контейнер и элементы.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch4-5.html">Введение в CSS Grid: работа с сетками.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css4-1">Блочные и строчные элементы.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css4-2">Свойства <code>display: block</code>, <code>inline-block</code>, <code>none</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css4-3">Модель блочной коробки (Box Model).</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css4-4">Введение в Flexbox: контейнер и элементы.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css4-5">Введение в CSS Grid: работа с сетками.</a></li>
         </ul>
 
         <h2>Позиционирование элементов</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch5-1.html">Статичное, относительное, абсолютное и фиксированное позиционирование.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch5-2.html">Свойства <code>top</code>, <code>right</code>, <code>bottom</code>, <code>left</code>, <code>z-index</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch5-3.html">Современные макеты с помощью Flexbox и Grid.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css5-1">Статичное, относительное, абсолютное и фиксированное позиционирование.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css5-2">Свойства <code>top</code>, <code>right</code>, <code>bottom</code>, <code>left</code>, <code>z-index</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css5-3">Современные макеты с помощью Flexbox и Grid.</a></li>
         </ul>
 
         <h2>Адаптивный дизайн</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch6-1.html">Введение в адаптивную верстку.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch6-2.html">Использование медиа-запросов (<code>@media</code>) для различных устройств.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch6-3.html">Основы подхода "Mobile First".</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch6-4.html">Работа с резиновыми единицами: <code>em</code>, <code>rem</code>, <code>vw</code>, <code>vh</code>, <code>%</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css6-1">Введение в адаптивную верстку.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css6-2">Использование медиа-запросов (<code>@media</code>) для различных устройств.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css6-3">Основы подхода "Mobile First".</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css6-4">Работа с резиновыми единицами: <code>em</code>, <code>rem</code>, <code>vw</code>, <code>vh</code>, <code>%</code>.</a></li>
         </ul>
 
         <h2>Трансформации и анимации</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch7-1.html">Трансформации: <code>transform</code>, <code>translate</code>, <code>rotate</code>, <code>scale</code>, <code>skew</code>.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch7-2.html">Переходы: <code>transition</code>, как задать временные интервалы и задержки.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch7-3.html">Анимации: свойство <code>animation</code>, ключевые кадры <code>@keyframes</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css7-1">Трансформации: <code>transform</code>, <code>translate</code>, <code>rotate</code>, <code>scale</code>, <code>skew</code>.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css7-2">Переходы: <code>transition</code>, как задать временные интервалы и задержки.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css7-3">Анимации: свойство <code>animation</code>, ключевые кадры <code>@keyframes</code>.</a></li>
         </ul>
 
         <h2>Практика: Стилизация веб-страницы</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch8-1.html">Создание простого макета сайта с помощью Flexbox.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch8-2.html">Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch8-3.html">Адаптация сайта под разные устройства с помощью медиа-запросов.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css8-1">Создание простого макета сайта с помощью Flexbox.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css8-2">Стилизация типичных элементов веб-страницы (шапка, меню, контент, подвал).</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css8-3">Адаптация сайта под разные устройства с помощью медиа-запросов.</a></li>
         </ul>
 
         <h2>Углубление: CSS-переменные и препроцессоры</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch9-1.html">Использование CSS-переменных (<code>--var</code> и <code>var()</code>).</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch9-2.html">Введение в препроцессоры: Sass, LESS (основные концепции).</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css9-1">Использование CSS-переменных (<code>--var</code> и <code>var()</code>).</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css9-2">Введение в препроцессоры: Sass, LESS (основные концепции).</a></li>
         </ul>
 
         <h2>Продвинутые темы</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch10-1.html">CSS Grid для сложных макетов.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch10-2.html">Переменные и каскадность.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch10-3.html">Углубленное использование псевдоклассов и псевдоэлементов.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch10-4.html">Оптимизация производительности CSS.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css10-1">CSS Grid для сложных макетов.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css10-2">Переменные и каскадность.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css10-3">Углубленное использование псевдоклассов и псевдоэлементов.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css10-4">Оптимизация производительности CSS.</a></li>
         </ul>
 
         <h2>Практика: Создание полноценного макета</h2>
@@ -226,9 +226,9 @@
 
         <h2>Поддержка кроссбраузерности</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/css/ch12-1.html">Как тестировать стили в разных браузерах.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch12-2.html">Использование автопрефиксеров.</a></li>
-          <li><a class="pagesLinks" href="../pages/css/ch12-3.html">Инструменты для тестирования и отладки.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css12-1">Как тестировать стили в разных браузерах.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css12-2">Использование автопрефиксеров.</a></li>
+          <li><a class="pagesLinks" href="article-css.html?slug=css12-3">Инструменты для тестирования и отладки.</a></li>
         </ul>
 
         <h2>Ресурсы для углубления знаний</h2>
@@ -236,7 +236,7 @@
           <li><a class="pagesLinks" href="https://developer.mozilla.org/ru/docs/Web/CSS" target="_blank">MDN Web Docs: CSS</a></li>
           <li><a class="pagesLinks" href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
           <li><a class="pagesLinks" href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp: CSS</a></li>
-          <li>Практика на платформах вроде <a href="https://codepen.io/" target="_blank">CodePen</a> и <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
+          <li><a href="https://codepen.io/" target="_blank">CodePen</a> + <a href="https://www.frontendmentor.io/">Frontend Mentor</a>.</li>
         </ul>
       </div>
 
@@ -346,8 +346,7 @@
 
 
     <a href="pages/PostgreSQL.html">PostgreSQL</a>
-    <a href="./pages/html.html">pages html</a>
-    <a href="./pages/css.html">pages CSS</a>
+    <a href="./addPages.html">добавить</a>
       
       
       <hr>
