--- a/pages/article.html
+++ b/pages/article.html
@@ -2,35 +2,54 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="./assets/images/image.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page</title>
-  <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <!-- <script src="./scripts/utils/prism.js" ></script> -->
+  <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  
   <style>
     .loading { color: gray; }
     #article li{padding: 0px; color: var(--gray10);}
     #article li:hover{box-shadow: none;}
     #article ul{list-style-type: circle;}
+    .tabs {min-height: 80.1vh;}
   </style>
 </head>
 <body>
   <header class="main-header-top">
     <div class="header-logo">
-      <img src="./assets/icons/html-icon.png" alt="html-icon">
-      <img src="./assets/icons/css-icon.png" alt="css-icon">
-      <img src="./assets/icons/js-icon.png" alt="css-icon">
+      <img src="../assets/icons/html-icon.png" alt="html-icon">
+      <img src="../assets/icons/css-icon.png" alt="css-icon">
+      <img src="../assets/icons/js-icon.png" alt="css-icon">
       <p>LIBRARY</p>
     </div>
+
+    <button class="burger-menu" aria-label="Открыть меню">&#9776;</button>
+
+    <div class="header-menu">
+      <button class="close-menu" aria-label="Закрыть меню">&times;</button>
+      <a href="#">О проекте</a>
+      <a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i> Войти</a>
+      <a href="#"><i class="fa fa-caret-left" aria-hidden="true"></i> Выйти</a>
+      <a href="#"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Зарегистрироваться</a>
+    </div>
   </header>
+  <div class="overlay"></div>
+
+  <!-- <div class="center-block">
+    <div class="center-block-content">
+      <div class="center-block-text">Собрание</div>
+      <div class="center-block-text">сочинений</div>
+      <div class="center-block-text">chatGPT</div>
+      <div class="center-block-text2">по мотивам обучающих материалов frontend разработки</div class="center-block-text2">
+    </div>
+  </div> -->
 
   <main>
     <div class="tabs">
       <div class="tab-buttons">
-        <button class="tab-button active" data-tab="tab1"><a href="./index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></button>
+        <button class="tab-button active" data-tab="tab1"><a href="../index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></button>
         <button class="tab-button" data-tab="tab2">CSS</button>
         <button class="tab-button" data-tab="tab3">JS</button>
         
@@ -43,7 +62,7 @@
           </div>
         </div>
       </div>
-
+<!-- HTML содержание -->
       <div class="tab-content active" id="tab1">
         <div id="article">
           <p class="loading">Загрузка статьи...</p>
@@ -191,19 +210,23 @@
         <p>Тут будут статьи Next.</p>
       </div>
     </div>
-
-
-
-
-
-
-
-
-      
   </main>
-
-  <footer> 
-    <p>©Copyright 2025 by nobody. All rights reversed.</p>
+  
+  <footer class="footer-container"> 
+    <div class="footer-content">
+      <a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-twitch" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    </div>
+    <div class="footer-content2">
+      <p>©Copyright 2025 by nobody. All rights reversed.</p>
+    </div>
   </footer>
 
   <script>
@@ -244,6 +267,6 @@
       }
     }
   </script>
-  <script src="./scripts/main.js" type="module"></script>
+  <script src="../scripts/main.js" type="module"></script>
 </body>
 </html>
