dark theme and toTopButton

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="./assets/icons/html-icon.png" alt="html-icon">
       <img src="./assets/icons/css-icon.png" alt="css-icon">
       <img src="./assets/icons/js-icon.png" alt="css-icon">
-      <p>LIBRARY</p>
+      <span class="header-logo-span">LIBRARY</span class="header-logo-span">
     </div>
 
     <button class="burger-menu" aria-label="Открыть меню">&#9776;</button>
@@ -25,6 +25,7 @@
       <a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i> Войти</a>
       <a href="#"><i class="fa fa-caret-left" aria-hidden="true"></i> Выйти</a>
       <a href="#"><i class="fa fa-hand-spock-o" aria-hidden="true"></i> Зарегистрироваться</a>
+      <button id="theme-toggle" aria-label="Переключить тему">🌓</button>
     </div>
   </header>
   <div class="overlay"></div>
@@ -348,7 +349,7 @@
       <p>©Copyright 2025 by nobody. All rights reversed.</p>
     </div>
   </footer>
-
+  <button id="scrollToTopButton">&#8593;</button>
   <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
