quick theme light/dark changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="./assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="light dark">
+  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
   <title>LIBRARY</title>
   <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/style.css">
