success render tabs

--- a/pages/article.html
+++ b/pages/article.html
@@ -87,7 +87,7 @@
   <main>
     <div class="tabs">
       <div class="tab-buttons">
-        <button class="tab-button active" data-tab="tab1" id="back-to-html"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
+        <button class="tab-button active" data-tab="tab1"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
         <button class="tab-button" data-tab="tab2">CSS</button>
         <button class="tab-button" data-tab="tab3">JS</button>
         
