--- a/pages/toc-css.html
+++ b/pages/toc-css.html
@@ -2,7 +2,7 @@
       <!-- <div class="tab-content" id="tab2"> -->
         <h2><i class="fa fa-css3" aria-hidden="true"></i> Введение в CSS</h2>
         <ul>
-          <li><a class="pagesLinks" href="../pages/article.html?slug=css1-1">Что такое CSS и зачем он нужен.</a></li>
+          <li><a class="pagesLinks" href="index.html?slug=css1-1">Что такое CSS и зачем он нужен.</a></li>
           <li><a class="pagesLinks" href="../pages/article-css.html?slug=css1-2">Основные способы подключения CSS: <code >inline</code>, <code>internal</code>, <code>external</code>.</a></li>
           <li><a class="pagesLinks" href="../pages/article-css.html?slug=css1-3">Основные синтаксические правила CSS.</a></li>
           <li><a class="pagesLinks" href="../pages/article-css.html?slug=css1-4">Основные понятия: селекторы, свойства, значения.</a></li>
