--- a/pages/toc-html.html
+++ b/pages/toc-html.html
@@ -3,9 +3,9 @@
   <h2><i class="fa fa-html5" aria-hidden="true"></i> Введение в HTML</h2>
   <ul>
     <li><a class="pagesLinks" href="../pages/article.html?slug=html1-1-1">Основные концепции веб-страниц: структура, браузеры и HTML.</a></li>
-    <li><a class="pagesLinks" href="../pages/article.html?slug=html1-1-2">Роль HTML в связке с CSS и JavaScript.</a></li>
-    <li><a class="pagesLinks" href="../pages/article.html?slug=html1-2-1">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
-    <li><a class="pagesLinks" href="../pages/article.html?slug=html1-2-2">Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></a></code>.</li>
+    <li><a class="pagesLinks" href="index.html?slug=html1-1-2">Роль HTML в связке с CSS и JavaScript.</a></li>
+    <li><a class="pagesLinks" href="index.html?slug=html1-2-1">Теги <code>&lt;html></code>, <code>&lt;head></code>, <code>&lt;body></code>, структура HTML-документа.</a></li>
+    <li><a class="pagesLinks" href="index.html?slug=html1-2-2">Тег <code>&lt;title></code>, заголовки <code>&lt;h1> – &lt;h6></a></code>.</li>
   </ul>
   
   <h2>Текст и форматирование</h2>
