--- a/article.html
+++ b/article.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="../assets/images/image.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/image.jpg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
   <title>Page</title>
-  <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     .loading { color: gray; }
@@ -59,15 +59,14 @@
       ol {margin-left: 10px;}
       li {line-height: 20px;padding: 0px;}
     }
-    /* @media (max-width: 925px) {.main-header-top {justify-content: flex-start;padding: 30px 10px;}} */
   </style>
 </head>
 <body>
   <header class="main-header-top">
     <div class="header-logo">
-      <img src="../assets/icons/html-icon.png" alt="html-icon">
-      <img src="../assets/icons/css-icon.png" alt="css-icon">
-      <img src="../assets/icons/js-icon.png" alt="css-icon">
+      <img src="./assets/icons/html-icon.png" alt="html-icon">
+      <img src="./assets/icons/css-icon.png" alt="css-icon">
+      <img src="./assets/icons/js-icon.png" alt="css-icon">
       <span class="header-logo-span">LIBRARY</span class="header-logo-span">
     </div>
 
@@ -174,6 +173,6 @@
       }
     }
   </script>
-  <script src="../scripts/main.js" type="module"></script>
+  <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
